Fix invisible CKEditor UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,6 @@ body {
     max-width: 795px;
 }
 
-svg {
+svg:not(.ck-icon) {
     display: none;
 }
